# mappingff

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REBUILD_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
doc/: README.md  TECHNICAL.md
docs/: OPEN_SOURCE_GUIDE_zh.md  SRC_MODULES_zh.md
examples/polystyrene/: 200_polystyrene.lmp  200_polystyrene.mol  polystyrene.db  run.sh
examples/polystyrene/samples/10_polystyrene/: 10_polystyrene.lmp
examples/ps_odms7poss/: README.md
examples/ps_odms7poss_legacy/segment1/segment1/: segment1.charmm.prm  segment1.charmm.rtf  segment1.desmond.cms  segment1.gmx.gro  segment1.gmx.itp  segment1.openmm.xml  segment1.pqr  segment1.q.lib  segment1.q.prm  segment1.tinker.key  segment1.tinker.xyz  segment1.xplor.param  segment1.xplor.top  segment1.z
examples/ps_odms7poss_legacy/segment2/segment2/: segment2.charmm.prm  segment2.charmm.rtf  segment2.desmond.cms  segment2.gmx.gro  segment2.gmx.itp  segment2.openmm.xml  segment2.pqr  segment2.q.lib  segment2.q.prm  segment2.tinker.key  segment2.tinker.xyz  segment2.xplor.param  segment2.xplor.top  segment2.z
examples/ps_odms7poss_legacy/segment3/segment3/: segment3.charmm.prm  segment3.charmm.rtf  segment3.desmond.cms  segment3.gmx.gro  segment3.gmx.itp  segment3.lammps.lmp  segment3.openmm.xml  segment3.pqr  segment3.q.lib  segment3.q.prm  segment3.tinker.key  segment3.tinker.xyz  segment3.xplor.param  segment3.xplor.top  segment3.z
examples/ps_odms7poss_legacy/segment4/segment4/: segment4.charmm.prm  segment4.charmm.rtf  segment4.desmond.cms  segment4.gmx.gro  segment4.gmx.itp  segment4.openmm.xml  segment4.pqr  segment4.q.lib  segment4.q.prm  segment4.tinker.key  segment4.tinker.xyz  segment4.xplor.param  segment4.xplor.top  segment4.z
examples/ps_pmma/: 50_ps_50_pmma.lmp  5_alt_20_ps_20_pmma.lmp  5_alt_20_ps_20_pmma.mol  ps_pmma.db  run.sh
examples/ps_pmma/samples/: 4_ps_4_pmma.lmp  5_pmma.lmp
legacy/: README.md
legacy/.github/workflows/: ci.yml  release.yml
legacy/docs/: DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_zh.md
legacy/examples/ps_odms7poss_legacy/outputs_legacy/: Global_AtomMap.csv  Global_BondedTerms.csv
legacy/examples/ps_odms7poss_legacy/outputs_legacy/hop_env/: hop0_KeyMap.csv  hop1_KeyMap.csv  hop2_KeyMap.csv
legacy/examples/ps_odms7poss_legacy/scripts/: build_multiatom_master.py  generate_from_current_db.sh  rebuild_databases.sh
legacy/examples/ps_odms7poss_legacy/segdata/segment2/: segment2.mol
legacy/examples/ps_odms7poss_legacy/segment3/: segment3.mol
legacy/src/macromapff/: cli.py
legacy/src/macromapff/domain/: __init__.py  atom_match.py  bonded_match.py  bonded_observed.py  env_key_match.py  keymap_merge.py  term_enumeration.py
legacy/src/macromapff/io/: __init__.py  log.py  output.py
legacy/src/macromapff/pipeline/: __init__.py  global_bonded.py  keymap_hop.py  parameterize.py  workflow.py
legacy/test_standard/segdata/segment4/: segment4.mol
src/macromapff/: __init__.py  cli.py  db.py  encode.py  fallback.py  lmp.py  mol.py  utils.py  workflow.py
src/macromapff/domain/: __init__.py  atom_typing_core.py  bonded_global_merge.py  env.py  env_features.py  env_key_codec.py  keymap_merge.py  multiatom_master_merge.py  multiatom_match_core.py  multiatom_observed.py  term_enumeration.py
src/macromapff/io/: __init__.py  input.py  log.py  output.py
src/macromapff/pipeline/: __init__.py  atom_env.py  atommap_sample.py  bondedterms_sample.py  build_envkey_mapping.py  build_final_keymap.py  build_hop_keymap.py  build_multiatom_master.py  env_build.py  extract_multiatom_terms.py  generate_lammps_data_from_mol2.py  hop_build.py  keymap_build.py  keymap_hop.py  lammps_gen.py  multi_build.py  multi_extract.py  multiatom_master.py  multiatom_observed.py  parameterize.py
src/macromapff/pipeline/core/: atom_match.py  lammps_parse.py  lammps_write.py  multi_match.py
src/mappingff/: __init__.py  cli.py  db.py  encode.py  fallback.py  lmp.py  lmp2rdkitmol.py  mass.txt  mol.py  utils.py  workflow.py
tests/: test.py  test_cli_smoke.py  test_edge_cases.py  test_phase1.py  test_standard_validation.py  test_standard_workflow.py  test_workflow.py
tests/standard/: 50_ps_50_pmma.mol  debug_test2.lmp  samples.db  target.lmp
tests/standard/samples/: 5_polystyrene.lmp
tests/standard/samples/segment1/: segment1.lmp
tests/standard/samples/segment2/: segment2.lmp
tests/standard/samples/segment4/: segment4.lmp
tests/standard/workflow_output/: PS-oDMS7POSS_param.lmp  db.db  db.pkl
(+10 files in other folders)
