[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mappingff"
version = "1.1.0"
description = "Molecular force field parameterization pipeline for generating LAMMPS data files"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name = "mappingff contributors" }
]
keywords = ["lammps", "rdkit", "molecular-modeling", "force-field", "parameterization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "rdkit-pypi>=2022.9.5",
  "numpy<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mappingff/mappingff"
Documentation = "https://github.com/mappingff/mappingff#readme"
Repository = "https://github.com/mappingff/mappingff"
Issues = "https://github.com/mappingff/mappingff/issues"

[project.scripts]
mappingff = "mappingff.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
