[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mappingff"
version = "1.1.0"
description = "Molecular force field parameterization pipeline for generating LAMMPS data files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "mappingff contributors" }
]
keywords = ["lammps", "rdkit", "molecular-modeling", "force-field", "parameterization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "rdkit>=2026.03.1",
  "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Caulfield23/mappingff"
Documentation = "https://github.com/Caulfield23/mappingff#readme"
Repository = "https://github.com/Caulfield23/mappingff"
Issues = "https://github.com/Caulfield23/mappingff/issues"

[project.scripts]
mappingff = "mappingff.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
